--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,9 @@
-@import "./base.css";
+@import './base.css';
 
 body {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 5rem 1rem;
 
   font-weight: normal;
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 5rem 1rem;
 }
