--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,7 @@
-@import './base.css';
+@import './base';
+@import './ui';
 
 body {
-
   font-weight: normal;
   margin: 0 auto;
   max-width: 1280px;
